Dodan 24urni test

--- a/zzrs_latex/poglavje01.tex
+++ b/zzrs_latex/poglavje01.tex
@@ -249,6 +249,30 @@ V tem primeru postavljamo hipotezo, da se z ve"canjem velikosti datoteke ve"ca t
 \end{itemize}
 
 
+\subsection{24 urni test - Eksperiment 6}
+\begin{itemize}
+	\item \textbf{Hipoteza: }  \\
+		Zaradi ugotavljanja zasedenosti omre"zja ter stre"znikov izvedli 24 urni test. Na"sa predpostavka je, da bodo "casi ve"cji "cez dan kot pono"ci.
+			
+	\item \textbf{Okoli"s"cine meritve: } \\
+		Testiranje smo izvedli v petek 26. in v soboto 27.5.2017. Test smo za"celi izvajati ob 13:30 in smo ga izvajai 24 ur na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 2GB RAM-a, 2 procesorja ter 40 GB prostora na SSD trdem disku. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (bubble sort). Skripto za simulacijo odjemalcev smo pognali v Trzinu. Za dostop je bila uporabljena internetna ponudba Telekom Slovenije s hitrostjo 20Mbps. Na stre"znik smo iz klienta po"siljali datoteke velikost 20,000 celih stevil za sortiranje v intervalih po 300s. To je po"celo 20 odjemalcev hkrati. Merili smo povpre"cen ca"s "cakanja odjemalcev in kako se ta spremija skozi cel dan. 
+
+ 	\item \textbf{Rezultati meritve: }  \\
+		\begin{figure}[h]
+  		\centering
+  		  \includegraphics[width=1.0\textwidth]{test6_24h.jpg}
+  		\caption{Graf povpre"cnega "casa cakanja odjemalcev v 24 urah }
+  		\label{8_graf_racunska_moc_50}
+		\end{figure}
+
+	\item \textbf{Komentar meritve: } \\ 
+		Z meritvijo smo ugotovili, da je povpre"cen "cas "cakanja odjemalcev preko celega dneva prakti"cno enak. Iz povpre"cja bolj o"citno gledajo le 4 meritve, ki so trajale ob"cutno dlje. Te meritve pa nam ne povedo veliko uporabnega, saj so razporejene dokaj naklju"cno "cez cel dan. Na"sa predpostavka, da bodo "casi obdelave sredi dneva "visji od tistih pono"ci je bila napa"cna. 
+
+
+\end{itemize}
+
+	
+
 
 
 \iffalse
