porocilo sintakticno in oblikovno popravljeno

--- a/zzrs_latex/preface.tex
+++ b/zzrs_latex/preface.tex
@@ -2,7 +2,7 @@
 \chapter{Predgovor}
 
 
-Prièujoèe delo je razdeljeno v deset poglavij, ki predstavljajo analize zmogljivosti nekaterih tipiènih strežniških in oblaènih izvedenk raèunalniških sistemov in njihovih storitev. Avtorji posameznih poglavij so slušatelji predmeta \textit{Zanesljivost in zmogljivost raèunalniških sistemov}, ki se je v štud.letu 2016/2017 predaval na 1. stopnji univerzitetnega študija raèunalništva in informatike na Fakulteti za raèunalništvo in informatiko Univerze v Ljubljani. Vsem študentom se zahvaljujem za izkazani trud, ki so ga vložili v svoje prispevke.
+Priï¿½ujoï¿½e delo je razdeljeno v deset poglavij, ki predstavljajo analize zmogljivosti nekaterih tipiï¿½nih streï¿½niï¿½kih in oblaï¿½nih izvedenk raï¿½unalniï¿½kih sistemov in njihovih storitev. Avtorji posameznih poglavij so sluï¿½atelji predmeta \textit{Zanesljivost in zmogljivost raï¿½unalniï¿½kih sistemov}, ki se je v ï¿½tud.letu 2016/2017 predaval na 1. stopnji univerzitetnega ï¿½tudija raï¿½unalniï¿½tva in informatike na Fakulteti za raï¿½unalniï¿½tvo in informatiko Univerze v Ljubljani. Vsem ï¿½tudentom se zahvaljujem za izkazani trud, ki so ga vloï¿½ili v svoje prispevke.
 
 \begin{flushright}
 \textit{prof. dr. Miha Mraz, Ljubljana, v maju 2017}
