--- a/zzrs_latex/poglavje01.tex
+++ b/zzrs_latex/poglavje01.tex
@@ -10,7 +10,7 @@
 \bigskip
 
 \section{Opis problema} \label{8_opis_problema}
-\noindent V zadnjem desetletju se na vseh podro"cjih ra"cunalni"stva vse bolj uveljavljajo obla"cne storitve in koncept odjemalec - stre"znik (angl. client - server). Z ve"canjem hitrosti internetnih povezav kon"cne delovne to"cke(predvsem osebni ra"cunalniki) izgubljajo del svojih primarnih funkcij. Hranjenje in obdelavo podatkov vse bolj prepu"scajo obla"cnim storitvam. V na"si analizi smo se osredoto"cili na obdelavo podatkov na strani stre"znika. Za breme smo izbrali datoteke razli"cnih velikosti, ki vsebujejo naklju"cna "stevila. Te datoteke odlemalci po"slejo na stre"znik, ki jih mora urediti v nara"scajocem vrstnem redu in poslati nazaj.  Na sliki \ref{8_opis_problema} je grafi"cen prikaz opisanega problema. Na"se testiranje bo obsegalo merjenje  "case "cakanja  klientov na urejeno datoteko ter merjenje obremenjenosti stre"znika. 
+\noindent V zadnjem desetletju se na vseh podro"cjih ra"cunalni"stva vse bolj uveljavljajo obla"cne storitve in koncept odjemalec - stre"znik (angl. \textit{client - server}). Z ve"canjem hitrosti internetnih povezav kon"cne delovne to"cke (predvsem osebni ra"cunalniki) izgubljajo del svojih primarnih funkcij. Hranjenje in obdelavo podatkov vse bolj prepu"s"cajo obla"cnim storitvam. V na"si analizi smo se osredoto"cili na obdelavo podatkov na strani stre"znika. Za breme smo izbrali datoteke razli"cnih velikosti, ki vsebujejo naklju"cna "stevila. Te datoteke odjemalci po"sljejo na stre"znik, ta pa jih uredi v nara"s"cajo"cem vrstnem redu in po"slje nazaj. Na sliki \ref{8_opis_problema} je grafi"cen prikaz opisanega problema. Na"se testiranje bo obsegalo merjenje  "case "cakanja  klientov na urejeno datoteko ter merjenje obremenjenosti stre"znika. 
 
 \begin{figure}
   \centering
@@ -25,13 +25,13 @@ V tem razdelku so opisane tehnologije in algoritmi, ki smo jih uporabili za na"s
 
 
 \subsection{Tehnologija na strani stre"znika }
-Na obla"cni stortivi smo implementirali stre"znik, ki je napisan v jeziku JavaScript \cite{8_js} z uporabo knji"znice Node.js. Stre"znik caka na HTTP zahteve. Ko stre"znik sprejme datoteko se za"cne izvajati program, ki "stevila v datoteki uredi po po vrsti. Ker je za ta program bistveno, da se izvede "cim hitreje smo za ta namen uporabili programski jezik C \cite{8_c}, ki spada med najhitrej"se programske jezike. Po kon"canem sortiranju stre"znik urejeno datoteko po"slje nazaj odjemalcu. 
+Na obla"cni storitvi smo implementirali stre"znik, ki je realiziran v jeziku JavaScript \cite{8_js} z uporabo knji"znice Node.js \cite{8_node}. Stre"znik "caka na HTTP zahteve s strani klienta, kateri po"slje datoteko "stevil za urejanje, ob sprejemu stre"znika opisane datoteke se za"cne izvajati program, ki "stevila v datoteki uredi po nara"s"cajo"cem vrstnem redu. Ker je za namene testiranja obla"cne infrastrukture bistveno, da se program "cim hitreje izvr"si smo za ta namen uporabili programski jezik C \cite{8_c}, ki spada med najhitrej"se programske jezike, zaradi njegove nizko-nivojske lege na procesorski arhitekturi. Po kon"canem sortiranju stre"znik urejeno datoteko po"slje nazaj odjemalcu.
 
 \subsection{Tehnologija za avtomatizacijo odjemalcev}
-Zaradi avtomatskega testiranja smo napisali skripto v programskem jeziku Python, ki omogo"ca avtomatsko po"siljanje datotek na stre"znik, ter po"caka na odgovor (datoteka z urejenimi "stevili). Seveda ob tem zabele"zimo "se "cas pred po"siljanjem zahteve in "cas po prejetju urejene datoteke, da dobimo celotni "cas potreben za to, da dobimo urejeno datoteko. Ker je odjemalcev lahko ve"cje "stevilo, smo ta problem re"sili z nitmi, kjer vsaka nit predstavlja enega odjemalca in po"silja zahteve na stre"znik preko istega IP naslova.
+Zaradi avtomatskega testiranja smo napisali skripto v programskem jeziku Python \cite{8_py}, ki omogo"ca avtomatsko po"siljanje datotek na stre"znik, ter "caka na odgovor, kateri natan"cneje je datoteka z urejenimi "stevili. Seveda ob tem zabele"zimo "se "cas pred po"siljanjem zahteve in "cas po prejetju urejene datoteke, da dobimo celotni "cas potreben za to, da dobimo urejeno datoteko. Ker je odjemalcev lahko ve"cje "stevilo, smo ta problem re"sili z nitmi, kjer vsaka nit predstavlja enega odjemalca in po"silja zahteve na stre"znik preko istega IP naslova.
 
 \subsection{Generiranje vhodnih podatkov}
-V programskem jeziku C smo napisali generator datotek, ki ustvari datoteko "zeljene velikosti z naklju"cnimi "srevili. Za teste smo generirali datoteke velikosti 10000, 20000, 30000, 40000 in 50000 "stevil tipa integer.
+V programskem jeziku C smo napisali generator datotek, ki ustvari datoteko "zeljene velikosti z naklju"cnimi "stevili. Za teste smo generirali datoteke velikosti 10000, 20000, 30000, 40000 in 50000 "stevil tipa integer.
 
 \begin{figure} [!h]
   \centering
@@ -41,39 +41,41 @@ V programskem jeziku C smo napisali generator datotek, ki ustvari datoteko "zelj
 \end{figure}
 
 \subsection{Izbrani algoritmi za sortiranje}
-Za namen testiranja smo implementirali dva algoritma. Najprej smo testirali z algoritmom za mehur"cno urejanje(bubble sort), ki ima "casovno zahevnost $O(n^2)$.
-Da bi testirali vpliv izbire algoritma smo implemenirali tudi algoritem quicksort z povpre"cno "casovno zahtevnostjo $O(n* log(n))$
+Za namen testiranja smo implementirali dva algoritma. Najprej smo testirali z algoritmom za mehur"cno urejanje (ang. \textit{bubble sort}), ki ima "casovno zahevnost $O(n^2)$.
+Da bi testirali vpliv izbire algoritma smo tudi implemenirali hitrej"si algoritem urejanja s porazdelitvami (ang. \textit{quicksort}), kateri ima povpre"cno "casovno zahtevnost $O(n* log(n))$.
 
 \begin{figure}  [!h]
   \centering
-    \includegraphics[width=0.65\textwidth]{ZZRS-sort_simple.pdf}
+    \includegraphics[width=0.55\textwidth]{ZZRS-sort_simple.pdf}
   \caption{Slika prikazuje algoritem sortiranja z $O(n^2)$ "casovno zahtevnostjo.}
   \label{8_sort}  
 \end{figure}
 
 \begin{figure}  [!h]
 	\centering
-	\includegraphics[width=0.65\textwidth]{ZZRS-quicksort.pdf}
+	\includegraphics[width=0.55\textwidth]{ZZRS-quicksort.pdf}
 	\caption{Slika prikazuje algoritem sortiranja z $O(n* log(n))$ "casovno zahtevnostjo.}
 	\label{8_quicksort}  
 \end{figure}
 
+\null
+\vfill
+\clearpage
 
 \section{Izbira ponudnikov}
-Najprej smo izbrali ponudnika obla"cnih storitev Cloud9, ki pa ni najbolj primeren za na"so nalogo, saj je v prvi vrsti razvojno okolje na spletu in ne toliko ponudnik stre"zniskih storitev. Pri ra"cunsko zahtevnej"sih testih smo naleteli na te"zave, saj je stre"znik po 120 sekundah povezavo zaprl. To je bil eden glavnih razlogov, da smo se odlo"cili zamenjati ponudnika, saj smo le tako lahko izvedli vse "zeljene teste. Izbrali smo ameri"sko podjetje DigitalOcean, ki je ponudnik istoimenske obla"cne infrastrukture. Na na"so sre"co sodelujejo v projektu Github Education Pack  in tako "studentom nudijo 50\$ kredita za uporabo njihovih storitev. Svoje stre"znike ima postavljene na osmih lokacijah po vsem svetu.
+Najprej smo izbrali ponudnika obla"cnih storitev Cloud9, ki pa ni najbolj primeren za na"s problem, saj je v prvi vrsti razvojno okolje na spletu in ne toliko ponudnik stre"zni"skih storitev. Pri ra"cunsko zahtevnej"sih testih smo naleteli na te"zave, saj je stre"znik po 120 sekundah povezavo zaprl. To je bil eden glavnih razlogov, da smo se odlo"cili za zamenjavo ponudnika obla"cnih storitev, saj smo le tako lahko izvedli vse "zeljene teste. Izbrali smo si ameri"sko podjetje DigitalOcean, ki je ponudnik istoimenske obla"cne infrastrukture. Na na"so sre"co sodelujejo v projektu Github Education Pack in tako "studentom nudijo 50\$ kredita za uporabo njihovih storitev.\\\\Svoje stre"znike ima postavljene na slede"cih osmih lokacijah po svetu:
 \begin{itemize}
-\item New York (ZDA)
-\item San Francisco (ZDA)
-\item Amsterdam (Nizozemska)
-\item Singapur (Singapur)
-\item London (Zdru"zeno kraljestvo)
-\item Fraknfurt (Nem"cija)
-\item Bangalore (Indija)
+\item New York (ZDA),
+\item San Francisco (ZDA),
+\item Amsterdam (Nizozemska),
+\item Singapur (Singapur),
+\item London (Zdru"zeno kraljestvo),
+\item Fraknfurt (Nem"cija),
+\item Bangalore (Indija).
 \end{itemize}
+V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki se med seboj razlikujejo po koli"cini dodeljenih storitvenih resursov.
 
-V okviru "studentskih kreditv so nam na voljo tri razli"cne konfiguracije, ki se med seboj razlikujejo po koli"cini dodeljenih resursov.
-
-\begin{figure}[!htbp]
+\begin{table}[!htbp]
   \centering
   \begin{tabular}{ | c | c | c | c | }
     \hline
@@ -85,22 +87,21 @@ V okviru "studentskih kreditv so nam na voljo tri razli"cne konfiguracije, ki se
   \caption{Konfiguracije stre"znikov, ki so na voljo za "studentske kredite.}
   \label{8_table1}
   \centering
-\end{figure}
+\end{table}
 
 
 
-
+\newpage
 \section{Rezultati meritev}
 
 
 \subsection{Stevilo odjemalcev - Eksperiment 1}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Na"sa hipoteza je, da se povpre"cen "cas "cakanja odjemalca pribli"zno linearno pove"cuje z ve"canjem stevila odjemalcev, ki hkrati po"siljajo datoteke na stre"znik.
+		Na"sa predpostavljena hipoteza sledi, da se povpre"cen "cas "cakanja odjemalca pribli"zno linearno pove"cuje z ve"canjem "stevila odjemalcev, ki hkrati po"siljajo datoteke na stre"znik.
 			
 	\item \textbf{Okoli"s"cine meritve: } \\
-		Testiranje smo izvedli v "cetrtek 18.5.2017 med 21:00 in 21:30 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 512 MB RAM-a, 1 procesor ter 20 GB prostora na SSD trdem disku. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (bubble sort). Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina (Ljubljana). Da dostop je bila uporabljna internetna povezana s hitrostjo 100 Mbps. 
-		Na stre"znik smo po"siljali datoteke, ki so vsebovale 20,000 "stevil tipa integer in merili "case pri 1, 10, 20, 30 in 40 odjemalcih.
+		Testiranje smo izvedli v "cetrtek 18.5.2017 med 21:00 in 21:30 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 512 MB RAM-a, 1 procesor ter 20 GB prostora na SSD trdem disku.\\Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (ang. \textit{bubble sort}). Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina (Ljubljana). Za dostop do interneta je bila uporabljena internetna povezana s hitrostjo 100 Mbps.\\ Na stre"znik so klienti (niti) po"siljali datoteke, ki so vsebovale 20,000 "stevil tipa integer in merili "case pri 1, 10, 20, 30 in 40 odjemalcih.
 
  	\item \textbf{Rezultati meritve: }  \\
 		
@@ -108,10 +109,10 @@ V okviru "studentskih kreditv so nam na voljo tri razli"cne konfiguracije, ki se
   	\centering
   	  \includegraphics[width=1.0\textwidth]{test1_st_odjemalcev.jpg}
   	\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od "stevila odjemalcev.}
-  	\label{8_graf_st_odjemalcev}
+  	\label{8_graf_1_rez}
 	\end{figure}
 
-	\begin{figure}[!htbp]
+	\begin{table}[!htbp]
   	\centering
   	\begin{tabular}{ | c | c | c | }
     	\hline
@@ -123,54 +124,49 @@ V okviru "studentskih kreditv so nam na voljo tri razli"cne konfiguracije, ki se
     	40 & 393.277 & 14.598\\ \hline
   	\end{tabular}
   	\caption{Tabela "casov obdelav datoteke z 20 tiso"c celimi "stevili.}
-  	\label{8_table1}
+  	\label{8_table2}
   	\centering
-	\end{figure}
+	\end{table}
 
+    \pagebreak
 	\item \textbf{Komentar meritve: } \\ 
-		Iz grafa lahko zelo razlo"cno vidimo, da se z ve"canjem "stevila odjemalcev linearno pove"cuje tudi povpre"cen "cas "cakanja posameznega odjemalca. To je rezultat, ki smo ga napovedali "ze v hipotezi, saj ima stre"znik omejeno "stevilo resursov in morajo zato ob ve"cjem stevilu zahtevkov odjemalci dlje "cakati. Prav tako lahko v tabeli opazimo, da se z ve"canjem stevila odjemalcev pove"cuje tudi standardna deviacija. To pomeni, da ob vi"sjih obremenitvah (ve"c odjemalcev) vedno te"zje predvidimo "cas obdelave datotek dolo"cenega klenta, saj prihaja do vedno ve"cjih odstopanj. 
-
-
+		Iz grafa~\ref{8_graf_1_rez} lahko zelo razlo"cno vidimo, da se z ve"canjem "stevila odjemalcev linearno pove"cuje tudi povpre"cen "cas "cakanja posameznega odjemalca. Opa"zen rezultat sovpada z na"so predpostavljeno hipotezo, saj ima stre"znik omejeno "stevilo resursov in morajo zato ob ve"cjem stevilu zahtevkov odjemalci dlje "cakati. Prav tako lahko v tabeli opazimo, da se z ve"canjem "stevila odjemalcev pove"cuje tudi standardna deviacija, kar pa pomeni, da ob vi"sjih obremenitvah (ve"c odjemalcev) vedno te"zje predvidimo "cas obdelave datotek dolo"cenega klenta, saj prihaja do vedno ve"cjih odstopanj.
 \end{itemize}
 
-
+\newpage
 \subsection{Velikost datotek - Eksperiment 2}
 \label{8_subsec:eksperiment_2}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Z tem eksperimentom smo "zeleli preveriti odvisnost povpre"cnega "casa "cakanja klientov glede na velikost datotek. Da bi se izni"cili vpliv "stevila odjemalcev na ta poizkus smo teste ponovili na ve"c razli"cnih stevilih odjemalcev.
-V tem primeru postavljamo hipotezo, da se z ve"canjem velikosti datoteke ve"ca tudi povpre"cni "cas "cakanja klientov. 
+		S slede"cim eksperimentom smo "zeleli preveriti odvisnost povpre"cnega "casa "cakanja klientov glede na velikost datotek. Da bi izni"cili vpliv "stevila odjemalcev na ta poizkus smo teste ponovili na ve"c razli"cnih "stevilih odjemalcev. V tem primeru predpostavljamo hipotezo, ki sledi da se z ve"canjem velikosti datoteke ve"ca tudi povpre"cni "cas "cakanja klientov. 
 			
 	\item \textbf{Okoli"s"cine meritve: } \\
-		Testiranje smo izvedli v "cetrtek 18.5.2017 med 21:30 in 24:00 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 512MB RAM-a, 1 procesor ter 20GB prostora na SSD trdem disku. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (bubble sort). Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina (Ljubljana). Da dostop je bila uporablejna internetna povezana s hitrostjo 100Mbps. 
-	 Na stre"znik smo po"siljali datoteke, ki so vsebovale 10,000, 15,000, 20,000, 25,000, 30,000, 40,000 in 50,000 "stevil tipa integer. Meritve smo ponovili na 1, 10, 20, 30 in 40 odjemalcih.  
+		Testiranje smo izvedli v "cetrtek 18.5.2017 med 21:30 in 24:00 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 512MB RAM-a, 1 procesor ter 20GB prostora na SSD trdem disku.\\ Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (ang. \textit{bubble sort}). Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina (Ljubljana). Za dostop do interneta je bila uporabljena internetna povezana s hitrostjo 100 Mbps.\\ Na stre"znik so klienti (niti) po"siljali datoteke, ki so vsebovale velikosti 10,000, 15,000, 20,000, 25,000, 30,000, 40,000 in 50,000 "stevil tipa integer. Meritve smo ponovili na 1, 10, 20, 30 in 40 odjemalcih.  
 
  	\item \textbf{Rezultati meritve: }  \\
-		%TODO: Zagotovi, da bo graf 1.7 tule..
-		\begin{figure}[!h]
-  		\centering
-  		  \includegraphics[width=1.0\textwidth]{test2_velikost_datotek.jpg}
-  		\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od velikosti datotek.}		
-  		\label{8_graf_st_odjemalcev}
-		\end{figure}
-
-	\item \textbf{Komentar meritve: } \\ 
-		Iz grafa zelo razlo"cno vidimo, da se povpre"cen "cas "cakanja posameznega odjemalca z ve"canjem velikosti datotek zelo hitro pove"cuje. Pri 40 odjemalih in datoteki velikosti 10,000 stevil tipa integer je povpre"cni "cas "cakanja pribli"zno 170 s. Pri datoteki veliosti 50,000 stevil pa ta "cats zna"sa "ze ve"c kot 2550 s. To je bilo pri"cakovano, saj je uporabljen algoritem za mehur"cno urejanje (bubble sort), ki ima "casovno zahtevnost  $O(n^2)$. Rezultati tega eksperimenta potrdijo, da se tudi na oblaku potreben "cas za obdelavo datotek z algoritmom bubble sort pove"cuje pribli"zno z kvadratom velikosti datotek. 
+ 	
+    \begin{table}[!h]
+      \centering
+        \includegraphics[width=1.0\textwidth]{test2_velikost_datotek.jpg}
+      \caption{Graf povpre"cnega "casa "cakanja odjemalcev v odvisnosti od velikosti datotek.}		
+      \label{8_graf_2_rez}
+    \end{table}
 		
-
-
+    \pagebreak
+	\item \textbf{Komentar meritve: } \\ 
+		Iz grafa ~\ref{8_graf_2_rez} zelo razlo"cno vidimo, da se povpre"cen "cas "cakanja posameznega odjemalca z ve"canjem velikosti datotek zelo hitro pove"cuje. Pri 40 odjemalcih in datoteki velikosti 10,000 "stevil tipa integer je povpre"cni "cas "cakanja pribli"zno 170 sekund. Pri datoteki veliosti 50,000 "stevil pa ta "cas zna"sa "ze ve"c kot 2550 sekund. To je bilo pri"cakovano, saj je bil za urejanje "stevil uporabljen algoritem za mehur"cno urejanje (bubble sort), ki ima "casovno zahtevnost $O(n^2)$. Rezultati tega eksperimenta potrdijo, da se tudi na oblaku potreben "cas za obdelavo datotek z algoritmom bubble sort pove"cuje pribli"zno s kvadratom velikosti datotek. 
 \end{itemize}
 
+\newpage
 \subsection{Ozko grlo na stre"zniku - Eksperiment 3}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Z na"simi meritvami smo stre"znike obremenili do najvi"sjih dovoljenih meja. V praksi ob maksimani obremenitvi sistema vedno obstaja neko ozko grlo sistema, ki ne more delovati hitreje in z tem postavlja neko mejo hitrosti delovanja sistema. V na"sem primeru predpostavljamo, da je najbolj obremenjena komponenta procesor, saj je sortiranje operacija, ki zahteva relativno veliko ra"cunske mo"ci. 
+		Z na"simi meritvami smo stre"znike obremenili do najvi"sjih dovoljenih meja. V praksi ob maksimalni obremenitvi sistema vedno obstaja neko ozko grlo sistema, ki ne more delovati hitreje in s tem postavlja neko mejo hitrosti delovanja sistema. V na"sem primeru predpostavljamo, da je najbolj obremenjena komponenta procesor, saj je sortiranje operacija, ki zahteva relativno veliko ra"cunske mo"ci. 
 			
 	\item \textbf{Okoli"s"cine meritve: } \\
 		Obremenitve stre"znika smo merili med Eksperimentom 2 (poglavje \ref{8_subsec:eksperiment_2}). 
 
  	\item \textbf{Rezultati meritve: }  \\
-	%TODO: Zagotovi, da bo graf tule
 		\begin{figure}[!htb]
   		\centering
   		  \includegraphics[width=1.0\textwidth]{test3_resursi.pdf}
@@ -180,82 +176,78 @@ V tem primeru postavljamo hipotezo, da se z ve"canjem velikosti datoteke ve"ca t
 
 
 	\item \textbf{Komentar meritve: } \\ 
-		Iz grafa \ref{8_graf_zasedenost_resursov} lahko razlo"cno razberemo, da je ozko grlo na"sega sistema procesor, saj je prakti"cno ves "cas izvajanja testov 100\% obremenjen. Poraba RAM-a in kapacitete trdega diska niso nikoli ekstremo obremenjene, saj med izvajanem nikoli ne uporabljamo ve"c kot 50\% RAM-a. Zasedenost diska pa je prakti"cno zanemarljiva, saj so datoteke relativno majhne glede na ponujeno velikost trgeda diska, datoteke pa se sproti bri"sejo in tako prepre"cimo te"zave z zasedenostjo trdega diska. 
-
-
+		Iz grafa \ref{8_graf_zasedenost_resursov} lahko razlo"cno razberemo, da je ozko grlo na"sega sistema procesor, saj je prakti"cno ves "cas izvajanja testov 100\% obremenjen. Poraba RAM-a in kapacitete trdega diska niso nikoli ekstremo obremenjene, saj med izvajanem nikoli ne uporabljamo ve"c kot 50\% RAM-a. Zasedenost diska pa je prakti"cno zanemarljiva, saj so datoteke relativno majhne glede na ponujeno velikost trdega diska, datoteke pa se sproti bri"sejo in tako prepre"cimo te"zave z prezasedenostjo trdega diska. 
 \end{itemize}
 
+\newpage
 \subsection{Lokalnost - Eksperiment 4}
 \label{8_subsec:eksperiment_4}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Zaradi mo"znosti izbire lokacije stre"znika smo hoteli preveriti vpliv lokacije na povpre"cni "cas "cakanja odjemalcev. Poleg stre"znika v Frankfurtu smo vzpostavili tudi stre"znik v San Franciscu. Na"sa hipoteza je, da bomo hitrej"se odzive dobivali od stre"znika v Frankfurtu, saj nam je fizi"cno precej bli"zje, kot San Francisco.
-			
+		Zaradi mo"znosti izbire lokacije stre"znika smo "zeleli preveriti vpliv lokacije na povpre"cni "cas "cakanja odjemalcev. Poleg stre"znika v Frankfurtu smo vzpostavili tudi stre"znik v San Franciscu. Na"sa hipoteza sledi, da bomo hitrej"se odzive dobivali od stre"znika v Frankfurtu, saj nam je fizi"cno precej bli"ze, kot San Francisco.		
 	\item \textbf{Okoli"s"cine meritve: } \\
-		Stre"znika imata dodeljeno enako kolic"cino resursov in name"s"ceno identi"cno programsko opremo. Ta je enaka kot v testu 2 (poglavje \ref{8_subsec:eksperiment_2}) To je bilo potrebno zagotoviti, da izklju"cimo vpliv programske opreme na hitrost odzivov stre"znika. Testiranje smo izvedli v ponedeljek 22.5.2017 med 10:00 in 14:00 po "casu UTC+01:00. Zaradi "casovnih pasov je bila ura v San Franciscu v "casu testiranja med 1:00 in 5:00 zjutraj. Teste smo ponovili z datotekami velikosti 20,000 in 50,000 celih stevil. 
-
+		Stre"znika imata dodeljeno enako koli"cino resursov in name"s"ceno identi"cno programsko opremo. Ta je enaka kot v testu 2 (poglavje \ref{8_subsec:eksperiment_2}) Slednje je bilo potrebno zagotoviti, da izklju"cimo vpliv programske opreme na hitrost odzivov stre"znika. Testiranje smo izvedli v ponedeljek 22.5.2017 med 10:00 in 14:00 po "casu UTC+01:00. Zaradi "casovnih pasov je bila ura v San Franciscu v "casu testiranja med 1:00 in 5:00 zjutraj. Teste smo ponovili z datotekami velikosti 20,000 in 50,000 celih stevil.
+		
  	\item \textbf{Rezultati meritve: }  \\
-		%TODO: zagotovi, da bosta oba grafa tule.
 		\begin{figure}[h]
   		\centering
   		  \includegraphics[width=1.0\textwidth]{test4_lokalnost_20.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od lokacije na primeru datoteke z 20,000 "stevili}
   		\label{8_graf_lokalnost_20}
 		\end{figure}
+		
 		\begin{figure}[h]
   		\centering
   		  \includegraphics[width=1.0\textwidth]{test4_lokalnost_50.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od lokacije na primeru datoteke z 50,000 "stevili}
   		\label{8_graf_lokalnost_50}
 		\end{figure}
-	\pagebreak
+		
+    \newpage
 	\item \textbf{Komentar meritve: } \\ 
-		Rezultati meritev niso potrdili na"se hipoteze, saj je je stre"znik v San Franciscu kljub ve"cji oddaljenosti hitreje odzival in vra"cal urejene datoteke. 
-		Razlike so vse bolj opazne ob ve"cji obremenitvi sistema (ve"cje datoteke in ve"c odjemalcev). Pri datoteki velikost 20,000 "stevil in enem odjemalcu lahko vidimo, da nam rezultate hitreje vrne stre"znik v Frankfurtu. Rezultate si razlagamo na na"cin, da je bil stre"znik v Frankfurtu bolj obremenjen v "casu izvajanja testov. Pri majhnih primerih je kljub svoji obremenjenosti uspel rezultat vrniti pred stre"znikom v San Franciscu. Z ve"canjem ra"cunske zahtevnosti problema pa je vse bolj do izraza pri"sla manj"sa zasedenost infrastruktire v San Franciscu. Drug mo"zen razlog bi bili lahko zmoglivej"si procesorji v stre"znikih lociranih v San Franciscu, vendar interne informacije o zgradbi stre"zni"skih centrov "zal niso javne.
-
-
+		Rezultati meritev niso potrdili na"se hipoteze, saj se je stre"znik v San Franciscu kljub ve"cji oddaljenosti hitreje odzival in vra"cal urejene datoteke. 
+		Razlike so vse bolj opazne ob ve"cji obremenitvi sistema (ve"cje datoteke in ve"c odjemalcev). Pri datoteki velikost 20,000 "stevil in enem odjemalcu lahko vidimo, da nam rezultate hitreje vrne stre"znik v Frankfurtu. Rezultate si razlagamo na na"cin, da je bil stre"znik v Frankfurtu bolj obremenjen v "casu izvajanja testov. Pri majhnih primerih je kljub svoji obremenjenosti uspel rezultat vrniti pred stre"znikom v San Franciscu. Z ve"canjem ra"cunske zahtevnosti problema pa je vse bolj do izraza pri"sla manj"sa zasedenost infrastrukture v San Franciscu. Drug mo"zen razlog bi bil lahko zmoglivej"si procesorji v stre"znikih lociranih v San Franciscu, vendar interne informacije o zgradbi stre"zni"skih centrov "zal niso javne.
 \end{itemize}
 
+\newpage
 \subsection{Razli"cne ra"cunske mo"ci - Eksperiment 5}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Na"sa hipoteze, ki jo bomo prevelili v tem poizkusu je, da se povpre"cni "cas "cakanja odjemalcev bistveno zmanj"sa, "ce je stre"znik bolj zmogljiv.
+		Na"sa hipoteze, ki jo bomo prevelili v tem poizkusu sledi, da se povpre"cni "cas "cakanja odjemalcev bistveno zmanj"sa, "ce je stre"znik bolj zmogljiv.
 			
 	\item \textbf{Okoli"s"cine meritve: } \\
-		Testiranje smo izvedli v torek 23.5.2017 med 00:30 in 02:30 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 2 GB RAM-a ter 2 procesorja. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (bubble sort). Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina(Ljubljana). Da dostop je bila uporabljena internetna povezana s hitrostjo 100Mbps. 
-		Na stre"znik smo po"siljali datoteke, ki so vsebovale 20,000 in 50,000 "stevil tipa integer in merili "case pri 1, 10, 20, 30 in 40 odjemalcih.
+		Testiranje smo izvedli v torek 23.5.2017 med 00:30 in 02:30 na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 2 GB RAM-a ter 2 procesorja. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (ang. \textit{bubble sort}).\\ Skripto za simulacijo odjemalcev smo pognali iz "studentskega naselja Ro"zna dolina(Ljubljana). Za dostop do interneta je bila uporabljena internetna povezana s hitrostjo 100Mbps.\\ Na stre"znik so klienti (niti) po"siljali datoteke velikosti 20,000 in 50,000 "stevil tipa integer in merili "case pri 1, 10, 20, 30 in 40 odjemalcih.
 
  	\item \textbf{Rezultati meritve: }  \\
-		V spodnjig grafih so vizualizani povpre"cni casi odziva treh razli"cnih streznikov. Streznik Frankfurt1 in San Francisco imata identi"cno konfiguracijo, kot je opisana v eksperimentu 4 (poglavje \ref{8_subsec:eksperiment_4}). Stre"znik Frankfurt2 pa ima na voljo 2 procesorja ter 2 GB RAM-a. 
+ 	
+		V grafih \ref{8_graf_racunska_moc_20} in \ref{8_graf_racunska_moc_50} so vizualizani povpre"cni casi odziva treh razli"cnih streznikov. Stre"znik Frankfurt1 in San Francisco imata identi"cno konfiguracijo, kot je opisana v eksperimentu 4 (poglavje \ref{8_subsec:eksperiment_4}). Stre"znik Frankfurt2 pa ima na voljo 2 procesorja ter 2 GB RAM-a.
+		
 		\begin{figure}[h]
   		\centering
   		  \includegraphics[width=1.0\textwidth]{test5_racunska_moc_20.jpg}
-  		\caption{Graf povpre"cnega "casa cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek z 20,000 "stevili.}
+  		\caption{Graf povpre"cnega "casa "cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek z 20,000 "stevili.}
   		\label{8_graf_racunska_moc_20}
 		\end{figure}
 
 	\begin{figure}[h]
   		\centering
   		  \includegraphics[width=1.0\textwidth]{test5_racunska_moc_50.jpg}
-  		\caption{Graf povpre"cnega "casa cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek z 50,000 "stevili.}
+  		\caption{Graf povpre"cnega "casa "cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek z 50,000 "stevili.}
   		\label{8_graf_racunska_moc_50}
 		\end{figure}
 	\pagebreak
 	\item \textbf{Komentar meritve: } \\ 
 		Meritve potrdijo na"so predpostavko, da vi"sja zmogljivost stre"znikov pripomore k bistveno ni"zjim povpre"cnim "casom potrebnim za odziv.
-
-
-
 \end{itemize}
 
-
+\newpage
 \subsection{24 urni test - Eksperiment 6}
 \begin{itemize}
 	\item \textbf{Hipoteza: }  \\
-		Zaradi ugotavljanja zasedenosti omre"zja ter stre"znikov izvedli 24 urni test. Na"sa predpostavka je, da bodo "casi ve"cji "cez dan kot pono"ci.
+		Zaradi ugotavljanja zasedenosti omre"zja ter stre"znikov smo povrh izvedli "se 24 ur trajajo"ci se test. Na"sa predpostavka sledi, da bodo "casi vi"sji v dnevnih "casovnih razmerah, tj. "cez dan kot pa pono"ci.
 			
 	\item \textbf{Okoli"s"cine meritve: } \\
-		Testiranje smo izvedli v petek 26. in v soboto 27.5.2017. Test smo za"celi izvajati ob 13:30 in smo ga izvajai 24 ur na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 2GB RAM-a, 2 procesorja ter 40 GB prostora na SSD trdem disku. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (bubble sort). Skripto za simulacijo odjemalcev smo pognali v Trzinu. Za dostop je bila uporabljena internetna ponudba Telekom Slovenije s hitrostjo 20Mbps. Na stre"znik smo iz klienta po"siljali datoteke velikost 20,000 celih stevil za sortiranje v intervalih po 300s. To je po"celo 20 odjemalcev hkrati. Merili smo povpre"cen ca"s "cakanja odjemalcev in kako se ta spremija skozi cel dan. 
+		Testiranje smo izvedli v petek 26. in v soboto 27.5.2017. Test smo za"celi izvajati ob 13:30 in smo ga izvajai 24 ur na stre"zniku v Frankfurtu. Na stre"zniku je tekel operacijski sistem Linux Ubuntu 16.04. Na voljo smo imeli 2GB RAM-a, 2 procesorja ter 40 GB prostora na SSD trdem disku. Na stre"zniku je bil izbran algoritem za mehur"cno urejanje (ang. \textit{bubble sort}).\\ Skripto za simulacijo odjemalcev smo pognali v Trzinu. Za dostop je bila uporabljena internetna ponudba Telekom Slovenije s hitrostjo 20Mbps.\\ Na stre"znik so klienti (niti) po"siljali datoteke velikosti 20,000 celih stevil za sortiranje v intervalih po 300 sekund. Slednje je po"celo 20 odjemalcev hkrati. Merili smo povpre"cen ca"s "cakanja odjemalcev in kako se ta spreminja skozi celoten dan. 
 
  	\item \textbf{Rezultati meritve: }  \\
 		\begin{figure}[h]
@@ -266,45 +258,22 @@ V tem primeru postavljamo hipotezo, da se z ve"canjem velikosti datoteke ve"ca t
 		\end{figure}
 
 	\item \textbf{Komentar meritve: } \\ 
-		Z meritvijo smo ugotovili, da je povpre"cen "cas "cakanja odjemalcev preko celega dneva prakti"cno enak. Iz povpre"cja bolj o"citno gledajo le 4 meritve, ki so trajale ob"cutno dlje. Te meritve pa nam ne povedo veliko uporabnega, saj so razporejene dokaj naklju"cno "cez cel dan. Na"sa predpostavka, da bodo "casi obdelave sredi dneva "visji od tistih pono"ci je bila napa"cna. 
-
-
+		Z meritvijo smo ugotovili, da je povpre"cen "cas "cakanja odjemalcev preko celega dneva prakti"cno enak. Iz povpre"cja bolj o"citno odstopajo le "stiri meritve, ki so trajale ob"cutno dalj "casa. Te meritve pa nam ne povedo veliko uporabnega, saj so razporejene dokaj naklju"cno "cez celoten dan. Na"sa hipoteza, ki predpostavlja, da bodo "casi obdelave sredi dneva "visji od tistih pono"ci je bila napa"cna.
 \end{itemize}
-
-	
-
-
 
 \iffalse
-
-\subsection{Stevilo klientov - Eksperiment n}
-\begin{itemize}
-	\item \textbf{Hipoteza: }  \\
-		To opi"semo kaj smo hoteli z meritvijo preveriti in kaj predpostalvjamo
-			
-	\item \textbf{Okoli"s"cine meritve: } \\
-		Tu opi"semo kje, kdaj in kako smo meritev izvedli
-
- 	\item \textbf{Rezultati meritve: }  \\
-		Tu so rezultat meritve
-
-	\item \textbf{Komentar meritve: } \\ 
-		Tole je pa moj komentar meritve
-
-
-\end{itemize}
-
-
-
+    \subsection{Stevilo klientov - Eksperiment n}
+    \begin{itemize}
+    	\item \textbf{Hipoteza: }  \\
+    		To opi"semo kaj smo hoteli z meritvijo preveriti in kaj predpostalvjamo
+    			
+    	\item \textbf{Okoli"s"cine meritve: } \\
+    		Tu opi"semo kje, kdaj in kako smo meritev izvedli
+    
+     	\item \textbf{Rezultati meritve: }  \\
+    		Tu so rezultat meritve
+    
+    	\item \textbf{Komentar meritve: } \\ 
+    		Tole je pa moj komentar meritve
+    \end{itemize}
 \fi
-
-
-
-
-
-
-
-
-
-
-
